# mouse-core

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml  zensical.toml
.cursor/rules/: docs-code-sync.mdc  no-backward-compat.mdc  one-way.mdc  python-venv.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/backbone/: index.html
api/data/: index.html
docs/: README.md  architecture.md  data.md  dataset.md  examples.md  getting-started.md  guide.md  index.md  losses.md  models.md  mouse_env.md  objectives.md
docs/api/: backbone.md  data.md  embedding.md  heads.md  losses.md  model.md
examples/: 01_collect_dataset.ipynb  01_collect_dataset.py  02_train_offline.ipynb  02_train_offline.py  03_inference.ipynb  03_inference.py  03_train_online.ipynb  04_inference.ipynb  04_train_offline_layerwise_dqn.ipynb  05_train_offline_layerwise_dqn.ipynb  05_train_offline_vec_dqn.ipynb  05_train_online_layerwise_dqn.ipynb  06_train_offline_text.ipynb  06_train_offline_vec_dqn.ipynb  06_train_online_vec_dqn.ipynb  07_train_offline_text.ipynb  07_train_online_distill.ipynb  07_train_online_ppo.ipynb  08_train_online_grpo.ipynb  08_train_online_ppo.ipynb  09_train_online_grpo.ipynb  README.md  index.html
experiments/: online_experiment.py  run_stage1.sh  run_stage2.sh  run_stage3.sh  run_stage4.sh  summarize.py
experiments/results/: asis.json  aug50.json  aug_rich.json  calibrate.json  calibrate256.json  div1000.json  div50.json  explore.json  full_online.json  gamma.json  model_pen.json  oracle_pen.json  oracle_pen_noaug.json  oracle_rich.json  penalty.json  smoke_oracle.json
losses/: index.html
scripts/: diagnose_train_offline.py  docs.sh  install.sh  publish.sh  test_docs.sh
site/: 404.html  index.html  objects.inv  search.json
site/api/embedding/: index.html
site/api/heads/: index.html
site/api/losses/: index.html
site/api/model/: index.html
site/architecture/: index.html
site/data/: index.html
site/examples/: index.html
site/losses/: index.html
src/: __init__.py  utils.py
src/data/: __init__.py  batch.py  dataset_store.py
src/losses/: dqn.py  sp.py  sv.py  vec_dqn.py
src/models/: backbone.py  base.py  embedding.py  encoding.py  heads.py  linear.py  llama.py  none.py  qwen3.py
src/models/backbone/: __init__.py  configs.py  llama.py  none.py  qwen3.py
src/models/embedding/: embedding.py  linear.py
src/models/heads/: base.py  dqn.py  swiglu.py  vec_dqn.py
src/mouse_core/: __init__.py  task_eval.py
src/mouse_core/data/: __init__.py  augment.py  augmenter.py  batch.py  dataloader.py  dataset_store.py  datastore.py  hub.py  sequence_augment.py
src/mouse_core/losses/: __init__.py  base.py  dqn.py  sp.py  sv.py  vec_dqn.py
src/mouse_core/models/: __init__.py  base.py  kv_policy.py
src/mouse_core/models/backbone/: __init__.py  base.py  flex_decode.py  flex_train.py  llama.py  modernbert.py  none.py  qwen3.py
src/mouse_core/models/embedding/: __init__.py  embedding.py  encoding.py  linear.py  packing.py  text.py  token_batch.py
src/mouse_core/models/heads/: __init__.py  base.py  discrete_action.py  dqn.py  layerwise_dqn.py  swiglu.py  vec_dqn.py
src/mouse_core/objectives/: __init__.py  base.py  dqn.py  grpo.py  layerwise_dqn.py  ppo.py  sp.py  sv.py  vec_dqn.py
tests/: test_augmenter.py  test_backbone_loading.py  test_dataloader.py  test_dataset_store.py  test_datastore.py  test_discrete_action_head.py  test_dqn_loss.py  test_dqn_objective.py  test_flex_packed_correctness.py  test_grpo_objective.py  test_hub.py  test_imports.py  test_kv_cache.py  test_kv_policy.py  test_layerwise_dqn.py  test_layerwise_dqn_objective.py  test_model_io.py  test_numeric_embedder.py  test_online_loop.py  test_packing.py  test_ppo_objective.py  test_segment_attention.py  test_sequence_augment.py  test_sp_objective.py  test_step_embedder.py  test_sv_objective.py  test_task_eval.py  test_text_embedder.py  test_vec_dqn_objective.py
