[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mouse-core"
version = "0.1.0"
description = "Meta-Optimization Using Sequential Experiences — core ICRL library"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.12.0",
    "numpy>=2.4.4",
    "transformers>=5.8.0",
    "tensordict>=0.12.1",
    "datasets>=4.8.5",
    "huggingface_hub>=0.30.0",
    "pillow>=11.0.0",
]

[project.urls]
Homepage = "https://github.com/micahr234/mouse-core"
Documentation = "https://github.com/micahr234/mouse-core/tree/main/docs"
Repository = "https://github.com/micahr234/mouse-core"
Issues = "https://github.com/micahr234/mouse-core/issues"

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "build>=1.2",
    "twine>=6.1",
]
examples = [
    "gymnasium>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.package-data]
mouse = ["py.typed"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

# Source lives under src/ but is exposed as the "mouse" namespace.
# package-dir tells setuptools that "mouse" maps to src/, so
# src/models/ → mouse.models, src/data/ → mouse.data, etc.
[tool.setuptools]
packages = [
    "mouse",
    "mouse.models",
    "mouse.models.backbone",
    "mouse.models.embedding",
    "mouse.models.heads",
    "mouse.data",
    "mouse.losses",
]

[tool.setuptools.package-dir]
"mouse" = "src"
"mouse.models" = "src/models"
"mouse.models.backbone" = "src/models/backbone"
"mouse.models.embedding" = "src/models/embedding"
"mouse.models.heads" = "src/models/heads"
"mouse.data" = "src/data"
"mouse.losses" = "src/losses"
