[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mouse-core"
version = "0.3.0"
description = "Meta-Optimization Using Sequential Experiences — core ICRL library"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.12.0",
    "numpy>=2.4.4",
    "transformers>=5.8.0",
    "tensordict>=0.12.1",
    "datasets>=4.8.5",
    "huggingface_hub>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/micahr234/mouse-core"
Documentation = "https://github.com/micahr234/mouse-core/tree/main/docs"
Repository = "https://github.com/micahr234/mouse-core"
Issues = "https://github.com/micahr234/mouse-core/issues"

[project.optional-dependencies]
examples = [
    "mouse-env @ git+https://github.com/micahr234/mouse-env.git@main",
    "gymnasium[atari]>=1.2.3",
    "opencv-python>=4.9",
]
atari = [
    "gymnasium[atari]>=1.0.0",
    "ale-py>=0.10.0",
    "opencv-python>=4.9",
]
all = [
    "mouse-core[examples,atari]",
]
dev = [
    "pyright",
    "pytest",
    "build>=1.2",
    "twine>=6.1",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.package-data]
mouse_core = ["py.typed"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.setuptools]
packages = [
    "mouse_core",
    "mouse_core.models",
    "mouse_core.models.backbone",
    "mouse_core.models.embedding",
    "mouse_core.models.heads",
    "mouse_core.data",
    "mouse_core.objectives",
]

[tool.setuptools.package-dir]
"" = "src"
