[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mouse-core"
version = "0.4.0"
description = "Meta-Optimization Using Sequential Experiences — core ICRL library"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=2.12.1",
    "numpy>=2.5.0",
    "transformers>=5.12.1",
    "tensordict>=0.13.0",
    "datasets>=5.0.0",
    "huggingface_hub>=1.20.1",
]

[project.urls]
Homepage = "https://github.com/micahr234/mouse-core"
Repository = "https://github.com/micahr234/mouse-core"
Issues = "https://github.com/micahr234/mouse-core/issues"

[project.optional-dependencies]
examples = [
    "mouse-gym @ git+https://github.com/micahr234/mouse-gym.git@main",
    "procedural-frozenlake @ git+https://github.com/micahr234/procedural-frozenlake.git@main",
    "gymnasium[toy-text]>=1.3.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.3.0",
]
all = [
    "mouse-core[examples]",
]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "build>=1.5.0",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.package-data]
mouse_core = ["py.typed"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.setuptools]
packages = [
    "mouse_core",
    "mouse_core.models",
    "mouse_core.models.backbone",
    "mouse_core.models.embedding",
    "mouse_core.models.heads",
    "mouse_core.data",
    "mouse_core.objectives",
]

[tool.setuptools.package-dir]
"" = "src"
